--- a/index.html
+++ b/index.html
@@ -236,20 +236,20 @@
                         <div class="both">
                             <div class="name">
                                 <label for="">الاسم</label>
-                                <input type="text">
+                                <input type="text" required>
                             </div>
                             <div class="email">
                                 <label for="">البريد الالكتروني</label>
-                                <input type="text">
+                                <input type="email" required>
                             </div>
                         </div>
                         <div class="group">
                             <label for="">الموضوع</label>
-                            <input type="text">
+                            <input type="text" required>
                         </div>
                         <div class="mas">
                             <label for="">الرسالة</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <textarea name="" id="" cols="30" rows="10" required></textarea>
                         </div>
                         <div class="button">
                             <button type="submit">إرسال</button>
