--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="section1">
         <div class="box-img">
-            <img src="pic/1.png" alt="" class="img">
+            <img src="pic/1.png" alt="" >
         </div>
         <div class="right-side">
             <h1> Programmers City <i class="fa-solid fa-city"></i> </h1>
