--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
 
         <div class="row">
-            <div>
+            <div class="div">
                 <div class="d">
                     <h1><i class="fa-brands fa-dribbble" style="color: #80aeff;"></i></h1>
                     <h4>البرمجيات</h4>
@@ -239,7 +239,7 @@
                                 <input type="text" required>
                             </div>
                             <div class="email">
-                                <label for="">البريد الالكتروني</label>
+                                <label for="">البريد</label>
                                 <input type="email" required>
                             </div>
                         </div>
